# Gemma-4-cli-agent

./: .gitignore  LICENSE  README.md  SKILL.md  gemma.py  pyproject.toml
gemma/: __init__.py  api.py  cli.py  media.py  slash.py  streaming.py  tools.py  ui.py
skills/gemma/: SKILL.md
skills/gemma-research/: SKILL.md
src/: SKILL.md  gemma.py
tests/: test_cli_smoke.py  test_slash.py
